fix: исправление ошибок API для прохождения тестов Postman
- Исправлена фильтрация событий: убрано принудительное значение paid=false по умолчанию
- Добавлена обработка нулевых ID (users=0, categories=0) в getAdminEvents
- Исправлено сравнение статуса события при создании запроса на участие
- Добавлена валидация даты в UpdateEventAdminRequest (@Future)
- Исправлена обработка дубликатов при обновлении категории
- Исправлен pre-request в Postman (url.replace -> toString())
- Исправлен StatsClient (UriComponentsBuilder без .encode())
- Переход на Criteria API в EventRepositoryCustom для избежания ошибок типов